--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </tr>
             <tr>
                 <td>SSC</td>
-            <td>BARI School</td>
+            <td>BARI High School</td>
                 <td>2020</td>
 
                     <td>GPA 4.00</td>
@@ -82,7 +82,7 @@
             </tr>
             <tr>
                 <td>Diploma</td>
-                <td>Model Institute of Science and Technology Polytechnic</td>
+                <td>Model Institute of Science and Technology </td>
                  
             </tr>
         </table>
